force-app/main/default/objects/ServiceTerritoryMember/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(DATEVALUE(EffectiveStartDate) &lt;= Today(),OR(  ISNULL(EffectiveEndDate) , ISBLANK(EffectiveEndDate), DATEVALUE(EffectiveEndDate) &gt;= Today()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>