force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_CustomerAppointmentCapacity120min__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentCapacity120min__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-5475 and SFS-5482</description>
    <label>Customer Appointment Capacity - 120 min</label>
    <type>Checkbox</type>
</CustomField>