force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_CustomerAppointmentCapacity330min__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentCapacity330min__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-5475</description>
    <label>Customer Appointment Capacity - 330 min</label>
    <type>Checkbox</type>
</CustomField>