force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_CustomerAppointmentCapacity480min__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerAppointmentCapacity480min__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-8242</description>
    <label>Customer Appointment Capacity - 480 min</label>
    <type>Checkbox</type>
</CustomField>