force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_Depot__c.field-meta.xml
<CustomField>
    <fullName>FSM_Depot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by the Depot Relevance rule</description>
    <label>Depot</label>
    <type>Checkbox</type>
</CustomField>