force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_Home__c.field-meta.xml
<CustomField>
    <fullName>FSM_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field for Home Relevance rule selection</description>
    <label>Home</label>
    <type>Checkbox</type>
</CustomField>