force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_Level3__c.field-meta.xml
<CustomField>
    <fullName>FSM_Level3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-139</description>
    <label>Level 3</label>
    <type>Checkbox</type>
</CustomField>