force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_NoRestriction__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoRestriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-139</description>
    <label>No Restriction</label>
    <type>Checkbox</type>
</CustomField>