force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_PostCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_PostCode__c</fullName>
    <formula>PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post code</label>
    <type>Text</type>
</CustomField>