force-app/main/default/objects/ServiceTerritoryMember/fields/FSM_ServiceResourceSAPexternalID__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResourceSAPexternalID__c</fullName>
    <formula>ServiceResource.FSM_ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resource SAP externalID</label>
    <type>Text</type>
</CustomField>