force-app/main/default/objects/ServiceTerritoryMember/fields/ServiceResourceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceResourceName__c</fullName>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServiceResourceName</label>
    <type>Text</type>
</CustomField>