force-app/main/default/objects/ServiceTerritoryMember/validationRules/FSM_PostalCodeAndCountryAreMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_PostalCodeAndCountryAreMandatory</fullName>
    <active>false</active>
    <description>For SFS-134
Updated as part of SFS-1396</description>
    <errorConditionFormula>AND(((ISPICKVAL(TerritoryType,&quot;Primary&quot;)) || ISPICKVAL(TerritoryType,&quot;Relocation&quot;)),
OR(ISBLANK(Country),
ISBLANK(PostalCode)),
NOT(ISPICKVAL( ServiceResource.ResourceType , &apos;Crew&apos;))
)</errorConditionFormula>
    <errorMessage>Country and Zip/Postal-Code cannot be blanked for Primary or Relocation type territory</errorMessage>
</ValidationRule>